# juspay-mcp

./: .envrc  .gitignore  ACTION_ITEMS.md  README.md  REPOSITORY_REVIEW.md  REVIEW_SUMMARY.md  activeContext.md  currentTask.md  flake.nix  justfile  main.py  pyproject.toml
.github/workflows/: import-check.yml
juspay_dashboard_mcp/: config.py  response_schema.py  tools.py
juspay_dashboard_mcp/api/: account.py  alert.py  api_keys.py  emi_plans.py  gateway.py  integrationChecklist.py  integrationCheklist.py  offer.py  orders.py  outage.py  outages.py  payments.py  payout_benedetails.py  payout_beneficiary_details.py  payout_gateways.py  payout_orders.py  payout_settings.py  qapi.py  qapi_info.py  rag_tool.py  report.py  settings.py  summarizer.py  surcharge.py  tesseract.py  tiptap2md.py  unified_alerts.py  user.py  utils.py
juspay_dashboard_mcp/api_schema/: account.py  alert.py  api_keys.py  emi_plans.py  gateway.py  integrationChecklist.py  integrationCheklist.py  offer.py  orders.py  outages.py  payments.py  payout_beneficiary_details.py  payout_gateways.py  payout_orders.py  qapi.py  qapi_info.py  rag_tool.py  report.py  settings.py  surcharge.py  tesseract.py  unified_alerts.py  user.py
juspay_docs_mcp/: discovery.py  dynamic.py  instructions.py  server.py  snapshot.json  tools.py
juspay_docs_mcp/mcpdoc/: __init__.py  main.py
juspay_docs_mcp/skills/: adyen_to_juspay.md  (+12 more)
juspay_mcp/: config.py  main.py  stdio.py  tools.py
nix/: devshell.nix  om.nix  python.nix
tools_test/: smoke_env_writer.py  smoke_legacy_off.py  smoke_oauth.py  smoke_oauth_flow.py
(+23 files in other folders)
