[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juspay-mcp"
version = "0.1.0"
description = "Tools for Juspay"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",           
    "weaviate-client>=3.26.7,<4.0.0",
    "nest-asyncio>=1.5.0",
    "markdownify>=0.11.6",      
]

[tool.setuptools]
packages = ["juspay_mcp", "juspay_mcp.api", "juspay_dashboard_mcp", "juspay_dashboard_mcp.api", "juspay_dashboard_mcp.api_schema"] 

[project.scripts]
juspay-mcp = "main:main"
